--- a/QA/QA.css
+++ b/QA/QA.css
@@ -13,87 +13,160 @@ body {
   background-position: center;
 }
 
+.menu {
+  display: flex;
+  padding-right: 20px;
+}
+.menu .menu-link {
+  display: flex;
+  height: 60px;
+  align-items: center;
+  text-align: center;
+  padding: 0 20px;
+  font: 25px Roboto;
+  color: #dc5371;
+  transition: color 0.3s ease;
+}
+.menu .menu-link:hover {
+  color: #fa89a3;
+}
+
 .boxpageqa {
-  margin: 50px 0px 0px 0px;
-  padding: 0px 70px 0px 80px;
+  margin: 10px auto;
 }
-.boxpageqa p {
-  padding: 3px;
+.boxpageqa .row.first .center {
+  width: calc(100% - 600px);
 }
-.boxpageqa h5 {
-  padding: 15px;
+.boxpageqa .row.first .right {
+  width: 400px;
+}
+.boxpageqa .row p {
+  margin-bottom: 10px;
+}
+.boxpageqa .row h5 {
+  margin: 15px;
   font-size: 15px;
   color: darkslategrey;
 }
-.boxpageqa h3 {
+.boxpageqa .row h3 {
   background: #3CA1D9;
   padding-left: 10px;
   margin: 10px 0 10px 0;
 }
-.boxpageqa b {
+.boxpageqa .row b {
   padding: 10px;
   margin: 10px;
 }
-
-.gold {
+.boxpageqa .row .left {
+  padding: 1px;
+  width: 200px;
+  float: left;
+}
+.boxpageqa .row .left .logo {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  color: #3CA1D9;
+  font: 70px/0.5 Style Script, cursive;
+  margin-left: 40px;
+  margin-top: 40px;
+}
+.boxpageqa .row .left a {
+  text-decoration: none;
+}
+.boxpageqa .row .center {
+  width: calc(100% - 400px);
+  float: left;
+}
+.boxpageqa .row .right {
+  width: 200px;
+  float: left;
+}
+.boxpageqa .row .right .hiper {
+  color: black;
+  text-decoration: none;
+}
+.boxpageqa .row .right .hiper:hover {
+  color: slategrey;
+  background: honeydew;
+  text-decoration: none;
+}
+.boxpageqa .row .right .hiper:visited {
+  color: grey;
+}
+.boxpageqa .row .gold {
   color: gold;
 }
-
-.golden {
+.boxpageqa .row .golden {
   color: goldenrod;
 }
-
-.row {
-  border: 1px;
-}
-.row:after {
+.boxpageqa .row:after {
   content: "";
   clear: both;
   display: table;
 }
-.row h1 {
+.boxpageqa .row h1 {
   text-align: center;
   margin: 30px 0 30px 0;
   font-size: 50px;
   color: #3CA1D9;
 }
-
-.left {
-  padding: 1px;
-  width: 5%;
-  float: left;
-}
-
-.center {
-  padding: 1px;
-  width: 80%;
-  float: left;
-}
-
-.right {
-  width: 15%;
-  float: left;
-}
-
-.iconhome img {
+.boxpageqa .row .iconhome img {
   width: 60px;
   height: auto;
   text-align: right;
   margin: 20px;
 }
-
-table {
+.boxpageqa .row table {
   border-style: ridge;
   box-sizing: content-box;
   width: 600px;
   text-align: center;
-  margin-left: 100px;
+  margin: 0 auto;
 }
-table th {
+.boxpageqa .row table th {
   border: 4px solid grey;
 }
-table td {
+.boxpageqa .row table td {
   border: 4px solid grey;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  background: url("images/bug4.jpg");
+  background-repeat: repeat-x;
+  background-size: contain;
+}
+
+.borderbody {
+  font: 20px/1.5 Lobster, cursive;
+  text-align: center;
+  border-style: groove;
+  border-color: transparent;
+  border-width: 7px;
+  margin-top: 50px;
+  margin-right: 20px;
+  padding: 5px;
+}
+
+.firstimg {
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+}
+
+.litlleimg {
+  width: 30%;
+  margin: 0 auto;
+  display: block;
+}
+
+.mediumimg {
+  width: 70%;
+  margin: 0 auto;
+  display: block;
 }
 
 /*# sourceMappingURL=QA.css.map */
