--- a/QA/QA.scss
+++ b/QA/QA.scss
@@ -13,95 +13,186 @@ body {
   background-position: center;
 }
 
-.boxpageqa {
-  margin: 50px 0px 0px 0px;
-  padding: 0px 70px 0px 80px;
+.menu {
+  display: flex;
+  padding-right: 20px;
 
-
-  p {
-    padding: 3px;
-  }
-  h5 {
-      padding: 15px;
-    font-size: 15px;
-    color: darkslategrey;
-  }
-
-  h3 {
-    background: #3CA1D9;
-    padding-left: 10px;
-    margin: 10px 0 10px 0;
-  }
-  b {
-    padding: 10px;
-    margin: 10px;
-  }
-}
-
-.gold {
-  color: gold;
-}
-
-.golden {
-  color: goldenrod;
-}
-
-.row {
-  border: 1px;
-
-  &:after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-
-  h1 {
+  .menu-link {
+    display: flex;
+    height: 60px;
+    align-items: center;
     text-align: center;
-    margin: 30px 0 30px 0;
-    font-size: 50px;
-    color: #3CA1D9;
+    padding: 0 20px;
+    font: 25px Roboto;
+    color: #dc5371;
+    transition: color .3s ease;
+  }
+
+  .menu-link:hover {
+    color: #fa89a3;
   }
 }
 
-.left {
-    padding: 1px;
-    width: 5%;
-    float: left;
-}
+.boxpageqa {
+  margin: 10px auto;
 
-.center {
-    padding: 1px;
-    width: 80%;
-    float: left;
-}
+  .row {
 
-.right {
-    width: 15%;
-    float: left;
-}
+    &.first {
+      .center {
+        width: calc(100% - 600px);
+      }
 
-.iconhome {
-
-    img {
-      width: 60px;
-      height: auto;
-      text-align: right;
-      margin: 20px;
+      .right {
+        width: 400px;
+      }
     }
-}
+    p {
+      margin-bottom: 10px;
+    }
+    h5 {
+      margin: 15px;
+      font-size: 15px;
+      color: darkslategrey;
+    }
 
-table {
+    h3 {
+      background: #3CA1D9;
+      padding-left: 10px;
+      margin: 10px 0 10px 0;
+    }
+    b {
+      padding: 10px;
+      margin: 10px;
+    }
+    .left {
+      padding: 1px;
+      width: 200px;
+      float: left;
+
+      .logo {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        color: #3CA1D9;
+        font: 70px/0.5 Style Script, cursive;
+        margin-left: 40px;
+        margin-top: 40px;
+      }
+      a {
+        text-decoration: none;
+      }
+    }
+
+    .center {
+      width: calc(100% - 400px);
+      float: left;
+    }
+
+    .right {
+      width: 200px;
+      float: left;
+
+      .hiper {
+        color: black;
+        text-decoration: none;
+
+        &:hover {
+          color: slategrey;
+          background: honeydew;
+          text-decoration: none;
+        }
+        &:visited {
+          color: grey;
+        }
+      }
+    }
+
+    .gold {
+      color: gold;
+    }
+
+    .golden {
+      color: goldenrod;
+    }
+
+      &:after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+
+      h1 {
+        text-align: center;
+        margin: 30px 0 30px 0;
+        font-size: 50px;
+        color: #3CA1D9;
+
+      }
+    .iconhome {
+
+      img {
+        width: 60px;
+        height: auto;
+        text-align: right;
+        margin: 20px;
+      }
+    }
+    table {
       border-style: ridge;
       box-sizing: content-box;
       width: 600px;
       text-align: center;
-      margin-left: 100px;
+      margin: 0 auto;
 
-  th {
-    border: 4px solid grey;
-  }
+      th {
+        border: 4px solid grey;
+      }
 
-  td {
-    border: 4px solid grey;
+      td {
+        border: 4px solid grey;
+      }
+    }
   }
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  background: url("images/bug4.jpg");
+  background-repeat: repeat-x;
+  background-size: contain;
+}
+
+.borderbody {
+  font: 20px/1.5 Lobster, cursive;
+  text-align: center;
+  border-style: groove;
+  border-color: transparent;
+  border-width: 7px;
+  margin-top: 50px;
+  margin-right: 20px;
+  padding: 5px;
+ }
+
+
+
+
+.firstimg {
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+}
+
+.litlleimg {
+  width: 30%;
+  margin: 0 auto;
+  display: block;
+}
+
+.mediumimg {
+  width: 70%;
+  margin: 0 auto;
+  display: block;
 }
