--- a/style.css
+++ b/style.css
@@ -212,9 +212,8 @@ body {
 }
 
 .box {
-    width: 30%;
-    height: auto;
-    margin: 50px auto 0;
+    width: 200px;
+    margin: 50px auto;
     position: relative;
     overflow: hidden;
 }
@@ -393,28 +392,58 @@ blockquote cite {
     border-width: 5px;
 }
 
-.row:after {
-    content: "";
+.borderdate {
+    border-style: dotted;
+    border-color: #FF8C00;
+    border-width: 5px;
+    border-radius: 40%;
+}
+
+
+.content_area {
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.content_area:after {
+    display: block;
+    content: '.';
     clear: both;
-    display: table;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+    font-size: 0;
+    line-height: 0;
 }
 
-.row {
+.image_block {
+    width: 100%;
 }
 
-.left {
-    width: 30%;
-    float: left;
+.image_block:after {
+    display: block;
+    content: '.';
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    width: 0;
+    font-size: 0;
+    line-height: 0;
 }
 
-.center {
-    width: 30%;
+.table {
+    border-style: ridge;
+    box-sizing: content-box;
+    width: 600px;
+    text-align: center;
+    margin: 0 auto;
 }
-
-.right {
-    width: 30%;
+.table th {
+    border: 4px solid grey;
 }
-
+.table td {
+    border: 4px solid grey;
+}
 
 
 
