--- a/styles/myhusband.css
+++ b/styles/myhusband.css
@@ -1,9 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
 body {
   font: 16px/1.5 Roboto, sans-serif;
@@ -19,19 +19,10 @@ body {
   position: absolute;
   margin-right: auto;
   margin-left: auto;
-
-.col {
-  width: 33,3333%;
-
-  .item {
-
-   }
-
-  }
-
 }
-
-
+.container .col {
+  width: 33, 3333%;
+}
 .flex-order {
   display: flex;
   flex-direction: column;
@@ -43,5 +34,7 @@ body {
 
 .single-post {
   line-height: 1.4;
-  font-size: 1.2857142857142858rem;
+  font-size: 1.2857142857rem;
 }
+
+/*# sourceMappingURL=myhusband.css.map */
